[gd_scene load_steps=4 format=3 uid="uid://dcbjyxsouccp8"]

[ext_resource type="Theme" uid="uid://c06vrlubyc4or" path="res://resources/theme.tres" id="1_liyum"]
[ext_resource type="Script" uid="uid://bnr8eent18h1v" path="res://scripts/options_menu.gd" id="2_ijpji"]
[ext_resource type="Shortcut" uid="uid://c3o7ikjabpote" path="res://resources/exit_shortcut.tres" id="3_hm4m4"]

[node name="OptionsMenu" type="Node2D"]
script = ExtResource("2_ijpji")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 360.0
color = Color(0, 0, 0, 0.5)

[node name="Menu" type="VBoxContainer" parent="."]
process_mode = 3
top_level = true
offset_left = 170.0
offset_top = 149.0
offset_right = 470.0
offset_bottom = 211.0
theme = ExtResource("1_liyum")

[node name="Sounds" type="GridContainer" parent="Menu"]
layout_mode = 2
columns = 2

[node name="SFXLabel" type="Label" parent="Menu/Sounds"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 0
text = "SFX"

[node name="SFX" type="HSlider" parent="Menu/Sounds"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="MusicLabel" type="Label" parent="Menu/Sounds"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 0
text = "Music"

[node name="Music" type="HSlider" parent="Menu/Sounds"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="ExitButton" type="Button" parent="Menu"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
shortcut = ExtResource("3_hm4m4")
text = "Exit"
flat = true

[connection signal="value_changed" from="Menu/Sounds/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="value_changed" from="Menu/Sounds/Music" to="." method="_on_music_value_changed"]
[connection signal="pressed" from="Menu/ExitButton" to="." method="_on_exit_button_pressed"]
